# ubiquitous-dollop

./: .gitignore  .gitmodules  Cargo.toml  build.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
signaling-server/: Cargo.toml
signaling-server/src/: main.rs
src/: bridge.rs  config.rs  discovery.rs  main.rs  render.rs  rtc.rs  settings.rs  signaling.rs  utils.rs  view.rs  wenview.rs
src/view/: bridge.rs  mod.rs
ui/: index.html  package-lock.json  package.json
ui/src/: App.vue  events.js  main.js  nativer.js  streamer.js  style.css
ui/src/components/: AudioDevice.vue  Connection.vue  Devices.vue  VideoDevice.vue
webview/: Cargo.toml  build.rs
webview/examples/: simple.rs
webview/package/src/: app.cpp  app.h  bridge.cpp  browser.cpp  browser.h  control.cpp  render.h  webview.cpp  webview.h
webview/src/: app.rs  browser.rs  lib.rs  ptr.rs
webview/src/browser/: bridge.rs  control.rs  mod.rs
